# html-wizard-desktop-app

./: .gitignore  2026-03-18-151649-create-an-agent-teams-folder-and-files-to-accomp.txt  2026-03-18-162534-create-an-agent-teams-folder-and-files-to-accomp.txt  CLAUDE.md  README.md  brand-guidelines.skill  index.html  package-lock.json  package.json  tailwind.config.js
agent-teams/: FORGE-STATUS.md  execution-plan.md
agent-teams/prompts/: group-a-scaffold.md  group-b-rust-fileops.md  group-c-rust-credentials.md  group-d-frontend-layout.md  group-e-frontend-state.md  group-f-integration.md  level2-group-a-preview.md  level2-group-b-overlay.md  level2-group-c-css-props.md  level2-group-d-monaco.md  level2-group-e-filetree.md  level2-group-f-integration.md  level3-group-a-providers.md  level3-group-b-orchestration.md  level3-group-c-frontend-state.md  level3-group-d-chat-ui.md  level3-group-e-inline-agent.md  level3-group-f-integration.md
agent-teams/scripts/: integrate.sh  launch-agents.sh  launch-level2.sh  launch-level3.sh  verify-build.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_provider.rs  credentials.rs  export.rs  file_ops.rs  file_watcher.rs  git_ops.rs  image.rs  mod.rs  orchestration.rs  project.rs  streaming.rs
src-tauri/src/models/: ai.rs  project.rs
src-tauri/src/plugins/: mod.rs  plugin_manifest.rs
src-tauri/src/security/: mod.rs  path_validator.rs  sanitizer.rs
src/hooks/: useAI.ts  useEditor.ts  useElementContext.ts  (+2 more)
(+58 files in other folders)
